<resources>
    <string name="app_name">to RINEX</string>
    <string name="enable_allFuntions">true</string>
    <string name="app_reqAPIlevel">This application requires Android 7.1 or higher</string>
    <string name="app_perm_OK">Permissions GRANTED</string>
    <string name="app_perm_NOK">Permissions NOT granted. Cannot continue</string>
    <string name="action_setting_info">Setting info</string>
    <string name="pref_header_setupAcq">Setup data acquisition</string>
    <string name="pref_title_survey_name">Survey name</string>
    <string name="pref_default_survey_name">SYYYYMMDD_hh_mm</string>
    <string name="pref_title_measurements_interval">GNSS measurements interval in seconds</string>
    <string-array name="pref_list_measurements_interval">
        <item>1</item>
        <item>5</item>
        <item>10</item>
    </string-array>
    <string-array name="pref_list_measurements_interval_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
    </string-array>
    <string name="pref_default_interval_value">1</string>
    <string name="pref_title_total_epochs">Epochs to acquire per point</string>
    <string name="pref_default_total_epochs">10</string>
    <string name="pref_title_acquire_nav_message">Navigation data</string>
    <string name="pref_summaryOn_acquire_nav_message">Acquire navigation message data from receiver</string>
    <string name="pref_summaryOff_acquire_nav_message">Do not acquire navigation message data from receiver</string>
    <string name="dataAcq_header">Perform GNSS data acquisition</string>
    <string name="dataAcq_epochTitle">"Epoch time not available"</string>
    <string name="dataAcq_satStateHeadTitle">"SAT C/N0 Observables     C/N0 Observables"</string>
    <string name="dataAcq_satStatTitle">"Waiting for GNSS raw data from receiver"</string>
    <string name="dataAcq_navStateTitle">"Navigation data status"</string>
    <string name="dataAcq_startStop_txtOff">START ACQUISITION</string>
    <string name="dataAcq_startStop_txtOn">STOP ACQUISITION</string>
    <string name="dataAcq_surveyTitle">"Current survey: "</string>
    <string name="dataAcq_pointTitle">"Current ORD file: "</string>
    <string name="dataAcq_epochAcq">" Epochs to acquire: "</string>
    <string name="dataAcq_pointsAcq">"Existing raw files"</string>
    <string name="dataAcq_logMsgs">"Log messages"</string>
    <string name="dataAcq_acqAborted">Acquisition ABORTED for this point</string>
    <string name="dataAcq_navStatus_UNKNOWN">Navigation data status is UNKOWN</string>
    <string name="dataAcq_navStatus_READY">NavMsg@sats</string>
    <string name="dataAcq_navStatus_READYfrom">:</string>
    <string name="dataAcq_navStatus_DISABLED">Acquisition of navigation data is disabled</string>
    <string name="dataAcq_navStatus_NOT_SUPPORTED">Device unable to provide navigation data</string>
    <string name="dataAcq_badClock">Receiver clock does not change from epoch to epoch</string>
    <string name="dataAcq_rawFileOpen">Error when creating raw data file</string>
    <string name="dataAcq_rawDataWrite">Error when storing raw data</string>
    <string name="dataAcq_rawObs"> (Observation):</string>
    <string name="dataAcq_rawNav"> (Navigation):</string>
    <string name="pref_header_setupRINEX">Setup RINEX headers</string>
    <string name="pref_title_rinex_version">RINEX version to use</string>
    <string name="pref_title_rinex_categorymandatory">Mandatory header records data</string>
    <string name="pref_title_rinex_categoryoptional">Optional header records data</string>
    <string name="pref_title_rinex_categoryselect">Data filtering parameters</string>
    <string name="pref_title_rinex_categoryothers">Others</string>
    <string-array name="pref_rinex_version">
        <item>2.10</item>
        <item>3.04</item>
    </string-array>
    <string-array name="pref_rinex_version_values">
        <item>2.10</item>
        <item>3.04</item>
    </string-array>
    <string name="pref_default_rinex_version">2.10</string>
    <string name="pref_title_rinex_runby">RUN BY header field</string>
    <string name="pref_title_rinex_markername">MARKER NAME header record</string>
    <string name="pref_title_rinex_markertype">MARKER TYPE header record</string>
    <string name="pref_title_rinex_observer">OBSERVER header field</string>
    <string name="pref_title_rinex_agency">AGENCY header field</string>
    <string name="pref_title_rinex_receivernumber">REC # (receiver number) header field</string>
    <string name="pref_title_rinex_comment">COMMENT header record</string>
    <string name="pref_title_rinex_markernumber">MARKER NUMBER header record</string>
    <string name="pref_title_rinex_clkoffs">RCV CLOCK OFFS APPL record</string>
    <string-array name="pref_rinex_clkoffs">
        <item>Observables ARE NOT CORRECTED</item>
        <item>Observables are corrected</item>
    </string-array>
    <string-array name="pref_rinex_clkoffs_values">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_default_rinex_clkoffs">1</string>
    <string name="pref_title_rinex_fitinterval">Adjust interval to duty cycle</string>
    <string name="pref_summaryOn_rinex_fitinterval">Set interval value to duty cycle and include only one measurement per cycle.</string>
    <string name="pref_summaryOff_rinex_fitinterval">Keep interval value stated and include all measurements taken</string>
    <string name="pref_default_rinex_unknown">Not known</string>
    <string name="pref_default_rinex_empty"> </string>
    <string name="pref_default_rinex_zero">0</string>
    <string name="pref_default_rinex_one">1</string>
    <string name="pref_default_rinex_markertype">HUMAN</string>
    <string name="pref_title_rinex_constellations">Constellations to EXCLUDE in RINEX files</string>
    <string-array name="pref_rinex_constellations">
        <item>GPS</item>
        <item>GLONASS</item>
        <item>Galileo</item>
        <item>Beidou</item>
        <item>SBAS</item>
        <item>QZSS</item>
    </string-array>
    <string-array name="pref_rinex_constellations_values">
        <item>GPS</item>
        <item>GLONASS</item>
        <item>GALILEO</item>
        <item>BEIDOU</item>
        <item>SBAS</item>
        <item>QZSS</item>
    </string-array>
    <string-array name="pref_default_rinex_constellations">
    </string-array>
    <string name="pref_title_rinex_satellites">List of satellites to EXCLUDE in RINEX files</string>
    <string name="pref_title_rinex_observables">Satellite observables to EXCLUDE in RINEX files</string>
    <string-array name="pref_rinex_observables">
        <item>C1C pseudorange</item>
        <item>L1C carrier phase</item>
        <item>D1C doppler</item>
        <item>S1C signal strength</item>
        <item>C1I pseudorange</item>
        <item>L1I carrier phase</item>
        <item>D1I doppler</item>
        <item>S1I signal strength</item>
        <item>C1B pseudorange</item>
        <item>L1B carrier phase</item>
        <item>D1B doppler</item>
        <item>S1B signal strength</item>
        <item>C5X pseudorange</item>
        <item>L5X carrier phase</item>
        <item>D5X doppler</item>
        <item>S5X signal strength</item>
    </string-array>
    <string-array name="pref_rinex_observables_values">
        <item>C1C</item>
        <item>L1C</item>
        <item>D1C</item>
        <item>S1C</item>
        <item>C1I</item>
        <item>L1I</item>
        <item>D1I</item>
        <item>S1I</item>
        <item>C1B</item>
        <item>L1B</item>
        <item>D1B</item>
        <item>S1B</item>
        <item>C5X</item>
        <item>L5X</item>
        <item>D5X</item>
        <item>S5X</item>
    </string-array>
    <string-array name="pref_default_rinex_observables">
    </string-array>
    <string name="pref_title_rinex_country">ISO country code (for RINEX V3 file names)</string>
    <string name="pref_title_rinex_loglevel">Logging level when generating RINEX files</string>
    <string-array name="pref_rinex_loglevel">
        <item>INFO</item>
        <item>CONFIG</item>
        <item>FINE</item>
        <item>FINER</item>
        <item>FINEST</item>
    </string-array>
    <string-array name="pref_rinex_loglevel_values">
        <item>INFO</item>
        <item>CONFIG</item>
        <item>FINE</item>
        <item>FINER</item>
        <item>FINEST</item>
    </string-array>
    <string name="pref_default_rinex_loglevel">INFO</string>
    <string name="genRinex_header">Generate RINEX files</string>
    <string name="genRinex_survey">Survey name: </string>
    <string name="genRinex_empty">-Select survey-</string>
    <string name="genRinex_acqFiles">Raw data files</string>
    <string name="genRinex_genFiles">Generate RINEX files for raw data files selected</string>
    <string name="genRinex_singleFile">One for each selected</string>
    <string name="genRinex_multipleFile">One file for all</string>
    <string name="genRinex_rinexFiles">Already generated RINEX files</string>
    <string name="genRinex_surveyNotSel">Survey not selected</string>
    <string name="genRinex_retCodeOK">OK, RINEX file(s) generated</string>
    <string name="genRinex_retCodeERR">ERROR when generating RINEX:</string>
    <string name="genRinex_retERR_OPENRAW">Opening raw file</string>
    <string name="genRinex_retERR_READRAW">Reading raw data</string>
    <string name="genRinex_retERR_CREOBS">Creating observation file</string>
    <string name="genRinex_retERR_WRIOBS">Writing observation data</string>
    <string name="genRinex_retERR_CRENAV">Creating navigation file</string>
    <string name="genRinex_retERR_WRINAV">Writing navigation data</string>
    <string name="genRinex_retERR_UNK">Unknown error</string>
    <string name="setting_activity_info_title">General information</string>
    <string name="setting_activity_info_body">&lt;p>This application generates RINEX observation files from GNSS raw data acquired from the GPS/GNSS receiver.&lt;/p>
        &lt;p>To do it follow the steps in the list:&lt;/p>
        &lt;ol>
        &lt;li>Setup the parameters for data acquisition&lt;/li>
        &lt;li>Perform the acquisition, saving observation and navigation raw data in files&lt;/li>
        &lt;li>Setup metadata for RINEX files and parameters to generate them&lt;/li>
        &lt;li>Select the raw data files to be converted to RINEX&lt;/li>
        &lt;/ol>
        &lt;br>&lt;p>The application  stores the raw data and RINEX files in the public &lt;em>Documents&lt;/em> directory.&lt;/p>
        &lt;br>&lt;p>For a correct functioning, the user has to give permissions to the application to access the &lt;em>Positioning service&lt;/em> and the &lt;em>Documents&lt;/em> directory.&lt;&lt;/p>
        &lt;br>&lt;p>&lt;font color="red">CREDITS&lt;/font>&lt;/p>
        &lt;p>toRINEX V3.0, July 2020&lt;/p>
        &lt;p>This application has been developed using Android Studio 3.0.1 and tested in Nexus 5X with Android 7.1.2 and Xiaomi Mi 8 with Android 9&lt;/p>
        &lt;br>&lt;p>Contact: gnss.apps@gmail.com &lt;/p>
    </string>
    <string name="setup_acquisition_info_title">Information on setup for acquisition</string>
</resources>