<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

<PreferenceCategory
    android:title="@string/pref_title_rinex_categorymandatory"
    android:key="rinex_categorymandatory" >
    <ListPreference
        android:title="@string/pref_title_rinex_version"
        android:key="rinex_version"
        android:entries="@array/pref_rinex_version"
        android:entryValues="@array/pref_rinex_version_values"
        android:defaultValue="@string/pref_default_rinex_version"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />
    <EditTextPreference
        android:title="@string/pref_title_rinex_runby"
        android:key="rinex_runby"
        android:defaultValue="@string/pref_default_rinex_unknown"
        android:maxLines="1"
        android:singleLine="true" />
    <EditTextPreference
        android:title="@string/pref_title_rinex_markername"
        android:enabled="@string/enable_allFuntions"
        android:key="rinex_markername"
        android:defaultValue="@string/pref_default_rinex_unknown"
        android:maxLines="1"
        android:singleLine="true" />
    <EditTextPreference
        android:title="@string/pref_title_rinex_markertype"
        android:enabled="@string/enable_allFuntions"
        android:key="rinex_markertype"
        android:defaultValue="@string/pref_default_rinex_markertype"
        android:maxLines="1"
        android:singleLine="true" />
    <EditTextPreference
        android:title="@string/pref_title_rinex_observer"
        android:enabled="@string/enable_allFuntions"
        android:key="rinex_observer"
        android:defaultValue="@string/pref_default_rinex_unknown"
        android:maxLines="1"
        android:singleLine="true" />
    <EditTextPreference
        android:title="@string/pref_title_rinex_agency"
        android:enabled="@string/enable_allFuntions"
        android:key="rinex_agency"
        android:defaultValue="@string/pref_default_rinex_unknown"
        android:maxLines="1"
        android:singleLine="true" />
    <EditTextPreference
        android:title="@string/pref_title_rinex_receivernumber"
        android:enabled="@string/enable_allFuntions"
        android:key="rinex_receivernumber"
        android:defaultValue="@string/pref_default_rinex_one"
        android:maxLines="1"
        android:singleLine="true" />
</PreferenceCategory>
<PreferenceCategory
        android:title="@string/pref_title_rinex_categoryoptional"
        android:key="rinex_categoryoptional">
    <EditTextPreference
        android:title="@string/pref_title_rinex_comment"
        android:key="rinex_comment" />
    <EditTextPreference
        android:title="@string/pref_title_rinex_markernumber"
        android:enabled="@string/enable_allFuntions"
        android:key="rinex_markernumber"
        android:defaultValue="@string/pref_default_rinex_one"
        android:maxLines="1"
        android:singleLine="true" />
    <ListPreference
        android:title="@string/pref_title_rinex_clkoffs"
        android:enabled="@string/enable_allFuntions"
        android:key="rinex_clkoffs"
        android:entries="@array/pref_rinex_clkoffs"
        android:entryValues="@array/pref_rinex_clkoffs_values"
        android:defaultValue="@string/pref_default_rinex_clkoffs"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />
</PreferenceCategory>
<PreferenceCategory
        android:title="@string/pref_title_rinex_categoryselect"
        android:key="rinex_categoryselect" >
    <SwitchPreference
        android:title="@string/pref_title_rinex_fitinterval"
        android:enabled="@string/enable_allFuntions"
        android:key="rinex_fitinterval"
        android:summaryOff="@string/pref_summaryOff_rinex_fitinterval"
        android:summaryOn="@string/pref_summaryOn_rinex_fitinterval"
        android:defaultValue="true" />
    <MultiSelectListPreference
        android:title="@string/pref_title_rinex_constellations"
        android:enabled="@string/enable_allFuntions"
        android:key="rinex_constellations"
        android:entries="@array/pref_rinex_constellations"
        android:entryValues="@array/pref_rinex_constellations_values"
        android:defaultValue="@array/pref_default_rinex_constellations" />
    <EditTextPreference
        android:title="@string/pref_title_rinex_satellites"
        android:enabled="@string/enable_allFuntions"
        android:key="rinex_satellites"
        android:maxLines="1"
        android:singleLine="true" />
    <MultiSelectListPreference
        android:title="@string/pref_title_rinex_observables"
        android:enabled="@string/enable_allFuntions"
        android:key="rinex_observables"
        android:entries="@array/pref_rinex_observables"
        android:entryValues="@array/pref_rinex_observables_values"
        android:defaultValue="@array/pref_default_rinex_observables" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_title_rinex_categoryothers"
        android:key="rinex_categoryothers" >
        <EditTextPreference
            android:title="@string/pref_title_rinex_country"
            android:key="rinex_country"
            android:maxLines="1"
            android:singleLine="true" />
        <ListPreference
            android:title="@string/pref_title_rinex_loglevel"
            android:key="rinex_loglevel"
            android:entries="@array/pref_rinex_loglevel"
            android:entryValues="@array/pref_rinex_loglevel_values"
            android:defaultValue="@string/pref_default_rinex_loglevel"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />
    </PreferenceCategory>
</PreferenceScreen>
