<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gnssapps.acq.torinex.GenerateRinex"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/genRinex_survey"
            android:gravity="end"
            />
        <Spinner
            android:id="@+id/perf_genRinex_surveyList"
            android:layout_width="0px"
            android:layout_weight="2"
            android:layout_height="wrap_content"
        />
    </LinearLayout>
    <!--tools:paddingHorizontal="40dp" tools:paddingVertical="40dp" -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/genRinex_acqFiles"
        android:gravity="center"
        />

    <ListView
        android:id="@+id/perf_genRinex_fileList"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="9"
        android:choiceMode="multipleChoice"
        android:scrollbars="vertical" />
    <!-- android:layout_below="@+id/perf_genRinex_surveyList"-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:text="@string/genRinex_genFiles"
        android:gravity="center_horizontal"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/perf_genRinex_multipleFile"
            android:text="@string/genRinex_multipleFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/perf_genRinex_singleFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genRinex_singleFile"
            />
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/genRinex_rinexFiles"
        />
    <TextView
        android:id="@+id/perf_genRinex_rinexFiles"
        android:layout_width="fill_parent"
        android:layout_height="0px"
        android:layout_weight="3
"
        android:scrollbars="vertical"
        />
    <!--android:layout_below="@+id/perf_genRinex_fileList" android:lines="5"  -->
</LinearLayout>